Cleaned the table for vaccine_type data

--- a/COVID_vaccine.ipynb
+++ b/COVID_vaccine.ipynb
@@ -334,6 +334,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VAX_TYPE</th>\n",
+       "      <th>VAX_MANU</th>\n",
+       "      <th>VAX_DOSE_SERIES</th>\n",
+       "      <th>VAX_ROUTE</th>\n",
+       "      <th>VAX_NAME</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VAERS_ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>916710</th>\n",
+       "      <td>COVID19</td>\n",
+       "      <td>MODERNA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>IM</td>\n",
+       "      <td>COVID19 (COVID19 (MODERNA))</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>916720</th>\n",
+       "      <td>COVID19</td>\n",
+       "      <td>MODERNA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>IM</td>\n",
+       "      <td>COVID19 (COVID19 (MODERNA))</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>916741</th>\n",
+       "      <td>COVID19</td>\n",
+       "      <td>PFIZER\\BIONTECH</td>\n",
+       "      <td>1</td>\n",
+       "      <td>SYR</td>\n",
+       "      <td>COVID19 (COVID19 (PFIZER-BIONTECH))</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>916772</th>\n",
+       "      <td>COVID19</td>\n",
+       "      <td>PFIZER\\BIONTECH</td>\n",
+       "      <td>UNK</td>\n",
+       "      <td>IM</td>\n",
+       "      <td>COVID19 (COVID19 (PFIZER-BIONTECH))</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>916790</th>\n",
+       "      <td>COVID19</td>\n",
+       "      <td>PFIZER\\BIONTECH</td>\n",
+       "      <td>1</td>\n",
+       "      <td>IM</td>\n",
+       "      <td>COVID19 (COVID19 (PFIZER-BIONTECH))</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         VAX_TYPE         VAX_MANU VAX_DOSE_SERIES VAX_ROUTE  \\\n",
+       "VAERS_ID                                                       \n",
+       "916710    COVID19          MODERNA               1        IM   \n",
+       "916720    COVID19          MODERNA               1        IM   \n",
+       "916741    COVID19  PFIZER\\BIONTECH               1       SYR   \n",
+       "916772    COVID19  PFIZER\\BIONTECH             UNK        IM   \n",
+       "916790    COVID19  PFIZER\\BIONTECH               1        IM   \n",
+       "\n",
+       "                                     VAX_NAME  \n",
+       "VAERS_ID                                       \n",
+       "916710            COVID19 (COVID19 (MODERNA))  \n",
+       "916720            COVID19 (COVID19 (MODERNA))  \n",
+       "916741    COVID19 (COVID19 (PFIZER-BIONTECH))  \n",
+       "916772    COVID19 (COVID19 (PFIZER-BIONTECH))  \n",
+       "916790    COVID19 (COVID19 (PFIZER-BIONTECH))  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vaccine_type_cols = [\"VAERS_ID\", \"VAX_TYPE\", \"VAX_MANU\", \"VAX_DOSE_SERIES\", \"VAX_ROUTE\", \"VAX_NAME\"]\n",
+    "vaccine_type_transformed= vaccine_type_df[vaccine_type_cols].copy()\n",
+    "\n",
+    "vaccine_type_transformed.drop_duplicates(\"VAERS_ID\", inplace=True)\n",
+    "vaccine_type_transformed.set_index(\"VAERS_ID\", inplace=True)\n",
+    "\n",
+    "vaccine_type_transformed.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
