Cleaned the table for vaccine_symptoms data

--- a/COVID_vaccine.ipynb
+++ b/COVID_vaccine.ipynb
@@ -453,6 +453,133 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SYMPTOM1</th>\n",
+       "      <th>SYMPTOM2</th>\n",
+       "      <th>SYMPTOM3</th>\n",
+       "      <th>SYMPTOM4</th>\n",
+       "      <th>SYMPTOM5</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VAERS_ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>916710</th>\n",
+       "      <td>Appendicitis</td>\n",
+       "      <td>Band neutrophil percentage increased</td>\n",
+       "      <td>Surgery</td>\n",
+       "      <td>White blood cell count increased</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>916720</th>\n",
+       "      <td>Dysphagia</td>\n",
+       "      <td>Dyspnoea</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>916741</th>\n",
+       "      <td>Chills</td>\n",
+       "      <td>Complex regional pain syndrome</td>\n",
+       "      <td>Fatigue</td>\n",
+       "      <td>Headache</td>\n",
+       "      <td>Joint range of motion decreased</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>916772</th>\n",
+       "      <td>Feeling abnormal</td>\n",
+       "      <td>SARS-CoV-2 test positive</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>916790</th>\n",
+       "      <td>Blood pressure diastolic increased</td>\n",
+       "      <td>Blood pressure systolic increased</td>\n",
+       "      <td>Chest discomfort</td>\n",
+       "      <td>Dizziness</td>\n",
+       "      <td>Dysphagia</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    SYMPTOM1  \\\n",
+       "VAERS_ID                                       \n",
+       "916710                          Appendicitis   \n",
+       "916720                             Dysphagia   \n",
+       "916741                                Chills   \n",
+       "916772                      Feeling abnormal   \n",
+       "916790    Blood pressure diastolic increased   \n",
+       "\n",
+       "                                      SYMPTOM2          SYMPTOM3  \\\n",
+       "VAERS_ID                                                           \n",
+       "916710    Band neutrophil percentage increased           Surgery   \n",
+       "916720                                Dyspnoea               NaN   \n",
+       "916741          Complex regional pain syndrome           Fatigue   \n",
+       "916772                SARS-CoV-2 test positive               NaN   \n",
+       "916790       Blood pressure systolic increased  Chest discomfort   \n",
+       "\n",
+       "                                  SYMPTOM4                         SYMPTOM5  \n",
+       "VAERS_ID                                                                     \n",
+       "916710    White blood cell count increased                              NaN  \n",
+       "916720                                 NaN                              NaN  \n",
+       "916741                            Headache  Joint range of motion decreased  \n",
+       "916772                                 NaN                              NaN  \n",
+       "916790                           Dizziness                        Dysphagia  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vaccine_symp_cols = [\"VAERS_ID\", \"SYMPTOM1\", \"SYMPTOM2\", \"SYMPTOM3\", \"SYMPTOM4\", \"SYMPTOM5\"]\n",
+    "vaccine_symp_transformed= vaccine_symp_df[vaccine_symp_cols].copy()\n",
+    "\n",
+    "vaccine_symp_transformed.drop_duplicates(\"VAERS_ID\", inplace=True)\n",
+    "vaccine_symp_transformed.set_index(\"VAERS_ID\", inplace=True)\n",
+    "\n",
+    "vaccine_symp_transformed.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
