Created a connection between postgresql and notebook

--- a/COVID_vaccine.ipynb
+++ b/COVID_vaccine.ipynb
@@ -580,6 +580,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connection_string = \"postgres:postgras@localhost:5432/ETL_Project\"\n",
+    "engine = create_engine(f'postgresql://{connection_string}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
