Loaded dataframes into the database

--- a/COVID_vaccine.ipynb
+++ b/COVID_vaccine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "4                              NaN              NaN  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "4       RA  COVID19 (COVID19 (PFIZER-BIONTECH))  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
       "\u001b[1;31mUnicodeDecodeError\u001b[0m: 'utf-8' codec can't decode byte 0xa0 in position 612: invalid start byte",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[1;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-aef8a3d74b31>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mvaccine_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"data/vaccine_data.csv\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mvaccine_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvaccine_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mvaccine_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-4-aef8a3d74b31>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mvaccine_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"data/vaccine_data.csv\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mvaccine_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvaccine_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mvaccine_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36mparser_f\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision)\u001b[0m\n\u001b[0;32m    674\u001b[0m         )\n\u001b[0;32m    675\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 676\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    677\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    678\u001b[0m     \u001b[0mparser_f\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    452\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    453\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 454\u001b[1;33m         \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparser\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    455\u001b[0m     \u001b[1;32mfinally\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    456\u001b[0m         \u001b[0mparser\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36mread\u001b[1;34m(self, nrows)\u001b[0m\n\u001b[0;32m   1131\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1132\u001b[0m         \u001b[0mnrows\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_validate_integer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"nrows\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1133\u001b[1;33m         \u001b[0mret\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1134\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1135\u001b[0m         \u001b[1;31m# May alter columns / col_dict\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -358,14 +358,14 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>VAX_TYPE</th>\n",
-       "      <th>VAX_MANU</th>\n",
-       "      <th>VAX_DOSE_SERIES</th>\n",
-       "      <th>VAX_ROUTE</th>\n",
-       "      <th>VAX_NAME</th>\n",
+       "      <th>vax_type</th>\n",
+       "      <th>vax_manu</th>\n",
+       "      <th>vax_dose_series</th>\n",
+       "      <th>vax_route</th>\n",
+       "      <th>vax_name</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>VAERS_ID</th>\n",
+       "      <th>vaers_id</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -419,16 +419,16 @@
        "</div>"
       ],
       "text/plain": [
-       "         VAX_TYPE         VAX_MANU VAX_DOSE_SERIES VAX_ROUTE  \\\n",
-       "VAERS_ID                                                       \n",
+       "         vax_type         vax_manu vax_dose_series vax_route  \\\n",
+       "vaers_id                                                       \n",
        "916710    COVID19          MODERNA               1        IM   \n",
        "916720    COVID19          MODERNA               1        IM   \n",
        "916741    COVID19  PFIZER\\BIONTECH               1       SYR   \n",
        "916772    COVID19  PFIZER\\BIONTECH             UNK        IM   \n",
        "916790    COVID19  PFIZER\\BIONTECH               1        IM   \n",
        "\n",
-       "                                     VAX_NAME  \n",
-       "VAERS_ID                                       \n",
+       "                                     vax_name  \n",
+       "vaers_id                                       \n",
        "916710            COVID19 (COVID19 (MODERNA))  \n",
        "916720            COVID19 (COVID19 (MODERNA))  \n",
        "916741    COVID19 (COVID19 (PFIZER-BIONTECH))  \n",
@@ -436,7 +436,7 @@
        "916790    COVID19 (COVID19 (PFIZER-BIONTECH))  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,15 +445,19 @@
     "vaccine_type_cols = [\"VAERS_ID\", \"VAX_TYPE\", \"VAX_MANU\", \"VAX_DOSE_SERIES\", \"VAX_ROUTE\", \"VAX_NAME\"]\n",
     "vaccine_type_transformed= vaccine_type_df[vaccine_type_cols].copy()\n",
     "\n",
-    "vaccine_type_transformed.drop_duplicates(\"VAERS_ID\", inplace=True)\n",
-    "vaccine_type_transformed.set_index(\"VAERS_ID\", inplace=True)\n",
+    "vaccine_type_transformed = vaccine_type_transformed.rename(columns={\"VAERS_ID\":\"vaers_id\", \"VAX_TYPE\": \"vax_type\",\n",
+    "                                                                    \"VAX_MANU\":\"vax_manu\", \"VAX_DOSE_SERIES\":\"vax_dose_series\",\n",
+    "                                                                    \"VAX_ROUTE\":\"vax_route\", \"VAX_NAME\":\"vax_name\"})\n",
+    "\n",
+    "vaccine_type_transformed.drop_duplicates(\"vaers_id\", inplace=True)\n",
+    "vaccine_type_transformed.set_index(\"vaers_id\", inplace=True)\n",
     "\n",
     "vaccine_type_transformed.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -477,14 +481,14 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>SYMPTOM1</th>\n",
-       "      <th>SYMPTOM2</th>\n",
-       "      <th>SYMPTOM3</th>\n",
-       "      <th>SYMPTOM4</th>\n",
-       "      <th>SYMPTOM5</th>\n",
+       "      <th>symptom1</th>\n",
+       "      <th>symptom2</th>\n",
+       "      <th>symptom3</th>\n",
+       "      <th>symptom4</th>\n",
+       "      <th>symptom5</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>VAERS_ID</th>\n",
+       "      <th>vaers_id</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -538,24 +542,24 @@
        "</div>"
       ],
       "text/plain": [
-       "                                    SYMPTOM1  \\\n",
-       "VAERS_ID                                       \n",
+       "                                    symptom1  \\\n",
+       "vaers_id                                       \n",
        "916710                          Appendicitis   \n",
        "916720                             Dysphagia   \n",
        "916741                                Chills   \n",
        "916772                      Feeling abnormal   \n",
        "916790    Blood pressure diastolic increased   \n",
        "\n",
-       "                                      SYMPTOM2          SYMPTOM3  \\\n",
-       "VAERS_ID                                                           \n",
+       "                                      symptom2          symptom3  \\\n",
+       "vaers_id                                                           \n",
        "916710    Band neutrophil percentage increased           Surgery   \n",
        "916720                                Dyspnoea               NaN   \n",
        "916741          Complex regional pain syndrome           Fatigue   \n",
        "916772                SARS-CoV-2 test positive               NaN   \n",
        "916790       Blood pressure systolic increased  Chest discomfort   \n",
        "\n",
-       "                                  SYMPTOM4                         SYMPTOM5  \n",
-       "VAERS_ID                                                                     \n",
+       "                                  symptom4                         symptom5  \n",
+       "vaers_id                                                                     \n",
        "916710    White blood cell count increased                              NaN  \n",
        "916720                                 NaN                              NaN  \n",
        "916741                            Headache  Joint range of motion decreased  \n",
@@ -563,7 +567,7 @@
        "916790                           Dizziness                        Dysphagia  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,15 +576,19 @@
     "vaccine_symp_cols = [\"VAERS_ID\", \"SYMPTOM1\", \"SYMPTOM2\", \"SYMPTOM3\", \"SYMPTOM4\", \"SYMPTOM5\"]\n",
     "vaccine_symp_transformed= vaccine_symp_df[vaccine_symp_cols].copy()\n",
     "\n",
-    "vaccine_symp_transformed.drop_duplicates(\"VAERS_ID\", inplace=True)\n",
-    "vaccine_symp_transformed.set_index(\"VAERS_ID\", inplace=True)\n",
+    "vaccine_symp_transformed = vaccine_symp_transformed.rename(columns={\"VAERS_ID\":\"vaers_id\", \"SYMPTOM1\": \"symptom1\",\n",
+    "                                                                    \"SYMPTOM2\":\"symptom2\", \"SYMPTOM3\":\"symptom3\",\n",
+    "                                                                    \"SYMPTOM4\":\"symptom4\", \"SYMPTOM5\":\"symptom5\"})\n",
+    "\n",
+    "vaccine_symp_transformed.drop_duplicates(\"vaers_id\", inplace=True)\n",
+    "vaccine_symp_transformed.set_index(\"vaers_id\", inplace=True)\n",
     "\n",
     "vaccine_symp_transformed.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -599,13 +607,31 @@
        "['vaccine_type', 'vaccine_symp']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "engine.table_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vaccine_symp_transformed.to_sql(name='vaccine_symp', con=engine, if_exists='append', index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vaccine_type_transformed.to_sql(name='vaccine_type', con=engine, if_exists='append', index=True)"
    ]
   },
   {
