Created file to hold sql password and db name and passed it as variables into jupyter notebook. Added comments to notebook for more clarity

--- a/COVID_vaccine.ipynb
+++ b/COVID_vaccine.ipynb
@@ -2,14 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Your Posgresql db name'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "#Dependencies\n",
     "import pandas as pd\n",
     "from sqlalchemy import create_engine, inspect\n",
     "from sqlalchemy.orm import Session\n",
-    "from sqlalchemy.ext.automap import automap_base"
+    "from sqlalchemy.ext.automap import automap_base\n",
+    "#File with sql password and db name to be used as variables during connection\n",
+    "from sql_keys import sql_pass, sql_db"
    ]
   },
   {
@@ -162,6 +176,7 @@
     }
    ],
    "source": [
+    "#Reading in vaccine_symptoms CSV\n",
     "vaccine_symp = \"data/vaccine_symptoms.csv\"\n",
     "vaccine_symp_df = pd.read_csv(vaccine_symp)\n",
     "vaccine_symp_df.head()"
@@ -285,6 +300,7 @@
     }
    ],
    "source": [
+    "#Reading in vaccine_type CSV\n",
     "vaccine_type = \"data/vaccine_type.csv\"\n",
     "vaccine_type_df = pd.read_csv(vaccine_type)\n",
     "vaccine_type_df.head()"
@@ -510,6 +526,7 @@
     }
    ],
    "source": [
+    "#Reading in vaccine_data CSV\n",
     "vaccine_data = \"data/vaccine_data.csv\"\n",
     "vaccine_df = pd.read_csv(vaccine_data,encoding= 'iso-8859-1')\n",
     "vaccine_df.head(5)"
@@ -845,41 +862,20 @@
     }
    ],
    "source": [
+    "#Creating a variable for the columns that are being used and creating a new dataframe\n",
     "vaccine_data_cols = [\"VAERS_ID\", \"RECVDATE\", \"AGE_YRS\", \"SEX\", \"DIED\", \"DATEDIED\", \"L_THREAT\", \"HOSPITAL\", \"HOSPDAYS\", \"RECOVD\", \"VAX_DATE\", \"HISTORY\"]\n",
     "vaccine_data_transformed= vaccine_df[vaccine_data_cols].copy()\n",
-    "\n",
+    "#Changing the names of the columns\n",
     "vaccine_data_transformed = vaccine_data_transformed.rename(columns={\"VAERS_ID\":\"vaers_id\", \"RECVDATE\": \"recvdate\",\n",
     "                                                                    \"AGE_YRS\":\"age_yrs\", \"SEX\":\"sex\",\n",
     "                                                                     \"DIED\":\"died\", \"DATEDIED\":\"datedied\",\n",
     "                                                                   \"L_THREAT\":\"l_threat\", \"HOSPITAL\":\"hospital\", \"HOSPDAYS\":\"hospdays\", \n",
     "                                                                    \"RECOVD\":\"recovd\", \"VAX_DATE\":\"vax_date\", \"HISTORY\":\"history\"})\n",
-    "\n",
+    "#Dropped duplicates from vaers_id column and set it as the index\n",
     "vaccine_data_transformed.drop_duplicates(\"vaers_id\", inplace=True)\n",
     "vaccine_data_transformed.set_index(\"vaers_id\", inplace=True)\n",
     "\n",
     "vaccine_data_transformed.head(15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['recvdate', 'age_yrs', 'sex', 'died', 'datedied', 'l_threat',\n",
-       "       'hospital', 'hospdays', 'recovd', 'vax_date', 'history'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vaccine_data_transformed.columns"
    ]
   },
   {
@@ -992,13 +988,14 @@
     }
    ],
    "source": [
+    "#Creating a variable for the columns that are being used and creating a new dataframe\n",
     "vaccine_type_cols = [\"VAERS_ID\", \"VAX_TYPE\", \"VAX_MANU\", \"VAX_DOSE_SERIES\", \"VAX_ROUTE\", \"VAX_NAME\"]\n",
     "vaccine_type_transformed= vaccine_type_df[vaccine_type_cols].copy()\n",
-    "\n",
+    "#Changing the names of the columns\n",
     "vaccine_type_transformed = vaccine_type_transformed.rename(columns={\"VAERS_ID\":\"vaers_id\", \"VAX_TYPE\": \"vax_type\",\n",
     "                                                                    \"VAX_MANU\":\"vax_manu\", \"VAX_DOSE_SERIES\":\"vax_dose_series\",\n",
     "                                                                    \"VAX_ROUTE\":\"vax_route\", \"VAX_NAME\":\"vax_name\"})\n",
-    "\n",
+    "#Dropped duplicates from vaers_id column and set it as the index\n",
     "vaccine_type_transformed.drop_duplicates(\"vaers_id\", inplace=True)\n",
     "vaccine_type_transformed.set_index(\"vaers_id\", inplace=True)\n",
     "\n",
@@ -1194,13 +1191,14 @@
     }
    ],
    "source": [
+    "#Creating a variable for the columns that are being used and creating a new dataframe\n",
     "vaccine_symp_cols = [\"VAERS_ID\", \"SYMPTOM1\", \"SYMPTOM2\", \"SYMPTOM3\", \"SYMPTOM4\", \"SYMPTOM5\"]\n",
     "vaccine_symp_transformed= vaccine_symp_df[vaccine_symp_cols].copy()\n",
-    "\n",
+    "#Changing the names of the columns\n",
     "vaccine_symp_transformed = vaccine_symp_transformed.rename(columns={\"VAERS_ID\":\"vaers_id\", \"SYMPTOM1\": \"symptom1\",\n",
     "                                                                    \"SYMPTOM2\":\"symptom2\", \"SYMPTOM3\":\"symptom3\",\n",
     "                                                                    \"SYMPTOM4\":\"symptom4\", \"SYMPTOM5\":\"symptom5\"})\n",
-    "\n",
+    "#Dropped duplicates from vaers_id column \n",
     "vaccine_symp_transformed.drop_duplicates(\"vaers_id\", inplace=True)\n",
     "\n",
     "\n",
@@ -1314,8 +1312,11 @@
     }
    ],
    "source": [
+    "#Combined all the 5 symptoms in the vaccine_symp_transformed df into one column\n",
     "all_symp = vaccine_symp_transformed.melt('vaers_id',[\"symptom1\",\"symptom2\",\"symptom3\",\"symptom4\",\"symptom5\"])\n",
+    "#Renamed the value column\n",
     "all_symp = all_symp.rename(columns={'value':'symptoms'})\n",
+    "#Made new df with only vaers_id and symptoms columns, set index to vaers_id and dropped NaN columns\n",
     "all_symp = all_symp[['vaers_id','symptoms']]\n",
     "all_symp.set_index(\"vaers_id\", inplace=True)\n",
     "all_symp.dropna(inplace=True)\n",
@@ -1329,7 +1330,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Created connection to the PosgreSQL DataBase\n",
     "connection_string = \"postgres:postgras@localhost:5432/ETL_Project\"\n",
+    "#connection_string = f\"postgres:{sql_pass}@localhost:5432/{sql_db}\"\n",
     "engine = create_engine(f'postgresql://{connection_string}')"
    ]
   },
@@ -1350,6 +1353,7 @@
     }
    ],
    "source": [
+    "#Showing all the table names in DataBase\n",
     "engine.table_names()"
    ]
   },
@@ -1359,6 +1363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Reading the all_symp DataFrame into all_symp table\n",
     "all_symp.to_sql(name='all_symp', con=engine, if_exists='append', index=True)"
    ]
   },
@@ -1368,6 +1373,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Reading the vaccine_type_transformed DataFrame into vaccine_type table\n",
     "vaccine_type_transformed.to_sql(name='vaccine_type', con=engine, if_exists='append', index=True)"
    ]
   },
@@ -1377,6 +1383,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Reading the vaccine_data_transformed DataFrame into vaccine_data table\n",
     "vaccine_data_transformed.to_sql(name='vaccine_data', con=engine, if_exists='append', index=True)"
    ]
   },
