--- a/COVID_vaccine.ipynb
+++ b/COVID_vaccine.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Your Posgresql db name'"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Dependencies\n",
     "import pandas as pd\n",
@@ -28,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +159,7 @@
        "4                              NaN              NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +283,7 @@
        "4       RA  COVID19 (COVID19 (PFIZER-BIONTECH))  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +509,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +845,7 @@
        "917122    Crohns disease, diabetes, high blood pressure,...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,12 +864,13 @@
     "vaccine_data_transformed.drop_duplicates(\"vaers_id\", inplace=True)\n",
     "vaccine_data_transformed.set_index(\"vaers_id\", inplace=True)\n",
     "\n",
+    "\n",
     "vaccine_data_transformed.head(15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -960,8 +950,57 @@
        "      <td>IM</td>\n",
        "      <td>COVID19 (COVID19 (PFIZER-BIONTECH))</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1024788</th>\n",
+       "      <td>COVID19</td>\n",
+       "      <td>MODERNA</td>\n",
+       "      <td>2</td>\n",
+       "      <td>IM</td>\n",
+       "      <td>COVID19 (COVID19 (MODERNA))</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1024790</th>\n",
+       "      <td>COVID19</td>\n",
+       "      <td>MODERNA</td>\n",
+       "      <td>2</td>\n",
+       "      <td>IM</td>\n",
+       "      <td>COVID19 (COVID19 (MODERNA))</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1024795</th>\n",
+       "      <td>COVID19</td>\n",
+       "      <td>MODERNA</td>\n",
+       "      <td>2</td>\n",
+       "      <td>IM</td>\n",
+       "      <td>COVID19 (COVID19 (MODERNA))</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1024817</th>\n",
+       "      <td>COVID19</td>\n",
+       "      <td>PFIZER\\BIONTECH</td>\n",
+       "      <td>1</td>\n",
+       "      <td>IM</td>\n",
+       "      <td>COVID19 (COVID19 (PFIZER-BIONTECH))</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1024853</th>\n",
+       "      <td>COVID19</td>\n",
+       "      <td>MODERNA</td>\n",
+       "      <td>UNK</td>\n",
+       "      <td>SYR</td>\n",
+       "      <td>COVID19 (COVID19 (MODERNA))</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5351 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -972,6 +1011,12 @@
        "916741    COVID19  PFIZER\\BIONTECH               1       SYR   \n",
        "916772    COVID19  PFIZER\\BIONTECH             UNK        IM   \n",
        "916790    COVID19  PFIZER\\BIONTECH               1        IM   \n",
+       "...           ...              ...             ...       ...   \n",
+       "1024788   COVID19          MODERNA               2        IM   \n",
+       "1024790   COVID19          MODERNA               2        IM   \n",
+       "1024795   COVID19          MODERNA               2        IM   \n",
+       "1024817   COVID19  PFIZER\\BIONTECH               1        IM   \n",
+       "1024853   COVID19          MODERNA             UNK       SYR   \n",
        "\n",
        "                                     vax_name  \n",
        "vaers_id                                       \n",
@@ -979,10 +1024,18 @@
        "916720            COVID19 (COVID19 (MODERNA))  \n",
        "916741    COVID19 (COVID19 (PFIZER-BIONTECH))  \n",
        "916772    COVID19 (COVID19 (PFIZER-BIONTECH))  \n",
-       "916790    COVID19 (COVID19 (PFIZER-BIONTECH))  "
+       "916790    COVID19 (COVID19 (PFIZER-BIONTECH))  \n",
+       "...                                       ...  \n",
+       "1024788           COVID19 (COVID19 (MODERNA))  \n",
+       "1024790           COVID19 (COVID19 (MODERNA))  \n",
+       "1024795           COVID19 (COVID19 (MODERNA))  \n",
+       "1024817   COVID19 (COVID19 (PFIZER-BIONTECH))  \n",
+       "1024853           COVID19 (COVID19 (MODERNA))  \n",
+       "\n",
+       "[5351 rows x 5 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1238,7 @@
        "[5351 rows x 6 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1207,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1359,7 @@
        "[18812 rows x 1 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1338,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1400,7 @@
        "['vaccine_type', 'all_symp', 'vaccine_data']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1359,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1379,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
